feat(testing): adding first draft of unit tests